--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <title>yepUcan</title>
 
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-<section id="vis"></section> 
+<section id="vis">
+<img class="top-logo" src="images/yepucan-white.png">
+  <h4>Next generation reward platform connecting the U-Generation with brands.</h4>
+</section> 
 
-<div style="width:150px; float:left">
-  <span id="corr-label">Correlation: </span><br>
-  <input type="range" min="-1.0" max="1.0" value="0.0" id="corr" step="0.01"/>
-</div>
 
 <div class="mid-section">
   <img src="images/phone.png">
@@ -23,11 +22,13 @@
   </div>
 </div>
 
-<div class="bottom-banner">YepUCan is coming soon. Stay updated!</div>
+<div class="bottom-banner">
+  <h1>YepUCan is coming soon. Stay updated!</h1>
+</div>
 
 <div class="email-form">
   <h1>Register<h1>
-  <h4>We'll notify you when the app becomes available. If you have any other questions, email contact@yepucan.com</h4>
+  <h4>We'll notify you when the app becomes available. If you have any other questions, email <a href = "">contact@yepucan.com</a></h4>
   <form action="">
     <input type="text" class="email" name="email" placeholder="ebaqdesign@gmail.com">
     <button type="button">Sign Up</button>
