Added register button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
 <section id="vis">
 <img class="top-logo" src="images/yepucan-white.png">
-  <h4>Next generation reward platform connecting the U-Generation with brands.</h4>
+<h4>Next generation reward platform connecting the U-Generation with brands.</h4>
+<div class="register">
+  <button type="button" onclick="smoothScroll(document.getElementsByClassName('email-form')[0])">Register</button>
+</div>
 </section> 
 
 
