--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <div class="bottom-banner">
   <h1>YepUCan is coming soon. Stay updated!</h1>
+  <img class="bottom-banner-logo" src="images/yepucan-white.png">
 </div>
 
 <div class="email-form">
@@ -52,7 +53,9 @@
 
 <div class="thin-banner"></div>
 
-<div class="bottom-brands"></div>
+<div class="bottom-brands">
+  <img class="bottom-brands-images" src="images/bottom-brands.png">
+</div>
 
 <div class="footer"><img class="footer-logo" src="images/footer-logo.png"></div>
 
