Adds responsiveness to node graph

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
 <body>
 <section id="vis">
-<img class="top-logo" src="images/yepucan-white.png">
-<h4>Next generation reward platform connecting the U-Generation with brands.</h4>
-<div class="register">
-  <button type="button" onclick="smoothScroll(document.getElementsByClassName('email-form')[0])">Register</button>
-</div>
+  <div class="header">
+    <img class="top-logo" src="images/yepucan-white.png">
+    <h4>Next generation reward platform connecting the U-Generation with brands.</h4>
+  </div>
 </section> 
 
+<div class="register">
+    <button type="button" onclick="smoothScroll(document.getElementsByClassName('email-form')[0])">Register</button>
+</div>
 
 <div class="mid-section">
   <img src="images/phone.png">
