--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>yepUcan</title>
 
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:100, 700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
