Check checkbox on input change

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>yepUcan</title>
 
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js" charset="utf-8"></script>
 <link href='https://fonts.googleapis.com/css?family=Roboto:100, 700' rel='stylesheet' type='text/css'>
 </head>
 
@@ -42,7 +43,7 @@
     <input type="checkbox" class="brand-checkbox" name="brand" value="brand"><h4 class="its-a-brand">It's a brand.</h4>
     <br>
     
-    <input list="brands" placeholder="Select category">
+    <input class = "brands" list="brands" placeholder="Select category">
     <datalist id="brands">
       <option value="Apparel">
       <option value="Car Service">
