--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 <div class="mid-section">
   <img src="images/phone.png">
   <div class="mid-section-copy">
-    <h1>Build Your Profile<h1>
-    <h4>Connect & Unlock your Full Value<br>and empower financial independence.</h4>
+      <h1>Build Your Profile<h1>
+      <h4>Connect & Unlock your Full Value<br>and empower financial independence.</h4>
   </div>
 </div>
 
 <div class="bottom-banner">
-  <h1>YepUCan is coming soon. Stay updated!</h1>
-  <img class="bottom-banner-logo" src="images/yepucan-white.png">
+  <h1>YepUCan is coming soon. Stay updated!<img class="bottom-banner-logo" src="images/yepucan-white.png"></h1>
 </div>
 
 <div class="email-form">
