--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 </div>
 
 <div class="bottom-banner">
-  <h1>YepUCan is coming soon. Stay updated!<img class="bottom-banner-logo" src="images/yepucan-white.png"></h1>
+  <h1>YepUCan is coming soon. Stay updated!</h1>
+  <img class="bottom-banner-logo" src="images/yepucan-white.png">
 </div>
 
 <div class="email-form">
